Fix dark mode for nature, qwinto, reefgardens and moonlight

--- a/src/css/games/nature.less
+++ b/src/css/games/nature.less
@@ -62,4 +62,8 @@ html[data-theme=dark] {
 	.na_header .ca_round {
 		color: #c19971;
 	}
+
+	.na_counter {
+		color: #000;
+	}
 }
